--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
         <title>odin-landing-page</title>
         <link rel="stylesheet" href="style.css">
     </head>
-
     <body>
+        <div class="header">HEADER</div>
 
+        <div class="content">
+            
+            <div class="content1">con1</div>
+                <span class="block1">content</span>
+                <span class="block2">img</span>
 
+            <div class="content2">con2</div>
+
+            <div class="content3">con3</div>
+
+            <div class="content4">con4</div>
+
+        </div>
+
+        <div class="footer">FOOTER</div>
     </body>
 </html>
