--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
         <div class="header">HEADER</div>
 
         <div class="content">
-            
+
             <div class="content1">con1</div>
                 <span class="block1">content</span>
                 <span class="block2">img</span>
 
-            <div class="content2">con2</div>
+            <div class="content2">Some random information.</div>
+                <div class="block1">Square icons</div>
 
             <div class="content3">con3</div>
 
