Finish header and footer

--- a/index.html
+++ b/index.html
@@ -6,23 +6,35 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="header">HEADER</div>
+        <div class="header">
+            <div><strong>Header Logo</strong></div>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
 
         <div class="content">
 
-            <div class="content1">con1</div>
-                <span class="block1">content</span>
-                <span class="block2">img</span>
+            <div class="hero">
+                <div class="block1">
+                    <div><strong>This website is awesome</strong></div>
+                    <div class="hero-sub">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                    <a href="#">Sign up</a>
+                </div>
+                <div class="block2">this is a placeholder for an image</div>
+            </div>
 
-            <div class="content2">Some random information.</div>
+            <div class="four-info">Some random information.</div>
                 <div class="block1">Square icons</div>
 
-            <div class="content3">con3</div>
+            <div class="quote">quote</div>
 
-            <div class="content4">con4</div>
+            <div class="contact">contact details</div>
 
         </div>
 
-        <div class="footer">FOOTER</div>
+        <div class="footer">Copyright C The Odin Project 2023</div>
     </body>
 </html>
