Finish quote section

--- a/index.html
+++ b/index.html
@@ -26,12 +26,41 @@
                 <div class="block2">this is a placeholder for an image</div>
             </div>
 
-            <div class="four-info">Some random information.</div>
-                <div class="block1">Square icons</div>
+            <div class="four-info">
+                <h1>Some random information.</h1>
+                <div class="block1">
+                    <div>
+                        <div class="sq-img"></div>
+                        <div class="sq-text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div>
+                        <div class="sq-img"></div>
+                        <div class="sq-text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div>
+                        <div class="sq-img"></div>
+                        <div class="sq-text">this is some subtext under an illustration or image</div>
+                    </div>
+                    <div>
+                        <div class="sq-img"></div>
+                        <div class="sq-text">this is some subtext under an illustration or image</div>
+                    </div>
+                </div>
+            </div>
 
-            <div class="quote">quote</div>
 
-            <div class="contact">contact details</div>
+            <div class="quote">
+                <div><em>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</em></div>
+                <div class="author">-Thor, God of Thunder</div>
+            </div>
+
+            <div class="contact">contact details
+                <div>
+                    <div>Call to action! it's time!</div>
+                    <div>Sign up for our product by clicking the button right over there!</div>
+                </div>
+                <a href="#">Sign up</a>
+            </div>
 
         </div>
 
