Finish contact section

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                 <div class="author">-Thor, God of Thunder</div>
             </div>
 
-            <div class="contact">contact details
+            <div class="contact">
                 <div>
-                    <div>Call to action! it's time!</div>
-                    <div>Sign up for our product by clicking the button right over there!</div>
+                    <div class="call">Call to action! it's time!</div>
+                    <div class="sign-up">Sign up for our product by clicking the button right over there!</div>
                 </div>
-                <a href="#">Sign up</a>
+                <a class="sign-but" href="#">Sign up</a>
             </div>
 
         </div>
