--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
 
         </div>
 
-        <div class="footer">Copyright C The Odin Project 2023</div>
+        <div class="footer">Copyright © The Odin Project 2023</div>
     </body>
 </html>
